Fix wrong height on nav mobile

--- a/frontend/components/navbar/nvabar.module.css
+++ b/frontend/components/navbar/nvabar.module.css
@@ -26,7 +26,7 @@
         transition: height .2s;
     }
     .navbarContainer.containerVisible {
-        height: 300px;
+        height: 350px;
         transition: height .2s;
     }
     .navbarItem {
